# super-tick-tac-toe

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  app-872bb96f0287d6de.js  app-872bb96f0287d6de_bg.wasm  app.css  index.html  input-8ce8d546d4a9563b.css  input-9b919fa889b984e7.css  worker.js  worker_bg.wasm
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: game.rs  is_none_or.rs  lib.rs  player.rs  region.rs  tile.rs
common/src/ai/: exhaustive.rs  mct.rs  mod.rs  random.rs
common/src/board/: board_enumerate.rs  board_index.rs  board_state.rs  index.rs  item.rs  iter.rs  mod.rs  state.rs
frontend/: Cargo.toml  Trunk.toml  app.css  index.html  input.css  package-lock.json  tailwind.config.js
frontend/src/: lib.rs  main.rs
frontend/src/ai/: exhaustive.rs  mct.rs  random.rs
frontend/src/app/: home.rs  how_to_play.rs  mod.rs
frontend/src/components/: game_div.rs  mod.rs  region_div.rs  tile_div.rs
native/: Cargo.toml
native/src/: main.rs
src/: app.rs  main.rs
src/app/: how_to_play.rs  mod.rs
src/components/: board_div.rs  game_div.rs  mod.rs  region_div.rs  tile_div.rs
src/types/: board.rs  game.rs  game_state.rs  grid_index.rs  mod.rs  player.rs  region.rs  tile.rs
src/types/board/: board.rs  board_enumerate.rs  board_index.rs  board_item.rs  board_state.rs  mod.rs
