[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
common = { path = "../common" }
tracing = "0.1.41"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.100"
