[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew-agent = { git = "https://github.com/yewstack/yew.git" }
common = { path = "../common" }
tracing = "0.1.41"
web-time = "1.1.0"
tracing-web = "0.1.3"
tracing-subscriber = "0.3.19"
